<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.RegisterFragment"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlRegister"
            android:background="#FF5100">

            <include
                layout="@layout/toolbar"
                android:id="@+id/toolbar"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/toolbar"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/text_boundary_background"
                android:drawableStart="@drawable/ic_action_person"
                android:drawablePadding="3dp"
                android:hint="@string/enter_name"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:drawableStart="@drawable/ic_action_email"
                android:drawablePadding="3dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:maxLength="10"
                android:drawableStart="@drawable/ic_action_phone"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPhoneNumber"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:drawableStart="@drawable/ic_action_address"
                android:drawablePadding="3dp"
                android:gravity="top"
                android:hint="@string/address"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:drawableStart="@drawable/ic_action_password"
                android:drawablePadding="3dp"
                android:hint="@string/choose_password"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etPassword"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:padding="10dip"
                android:singleLine="true"
                android:maxLength="6"
                android:drawableStart="@drawable/ic_action_password"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="40dip"
                android:layout_marginRight="12dip"
                android:backgroundTint="#FFEE2732"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </RelativeLayout>


</ScrollView>



<!--.activity.fragment.RegisterFragment-->